# Stellaux_website

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json
.claude/: CLAUDE.MD
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  backend-release.yml  docs-gateway-freshness.yml
client/: .env  package-lock.json  package.json
client/src/: routeTree.gen.ts  styles.css
docs/: API_Guidelines.md  ARCHITECTURE.md  Auth_Contract.md  CLIENT.md  Catalog_Contract.md  INTEGRATION_COVERAGE_PLAN.md  OPEN_DOCS_GATEWAY.html  Order_Contract.md  REQUIREMENTS.MD  backend_integration.md  inventory_management.md
docs/CI/: CD_Pipeline.md
docs/handoff/: 2026-06-08-rbac-supabase-unified.md
plans/: 2026-06-08-domain-to-domains-migration.md  2026-06-08-phase-0-platform-foundation-and-contracts.md  2026-06-08-phase1-product-inventory.md  2026-06-08-rbac-compile-fix.md  2026-06-09-phase3-shipment-fulfillment.md  2026-06-09-shared-models-to-supabase-migrations.md  2026-06-09-supabase-schema-hardening.md  2026-06-10-supabase-auth-and-rls-plan.md  2026-07-03-fly-deploy-and-release-hardening.md
src/: routeTree.gen.ts  styles.css
stellaux_server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  fly.production.toml  fly.staging.toml
stellaux_server/src/: common.rs  domain.rs  lib.rs  main.rs  server.rs
stellaux_server/src/common/: app_state.rs  audit.rs  auth.rs  bootstrap.rs  config.rs  dto.rs  error.rs  hash_util.rs  idempotency.rs  jwt.rs  metrics.rs  multipart_helper.rs  opentelemetry.rs  roles.rs  storage.rs  ts_format.rs
stellaux_server/src/domain/: account.rs  admin.rs  auth.rs  cart.rs  catalog.rs  checkout.rs  craft.rs  webhooks.rs
stellaux_server/src/domains/: mod.rs
stellaux_server/src/domains/account/api/: routes.rs
stellaux_server/src/domains/account/dto/: mod.rs
stellaux_server/src/domains/admin/api/: routes.rs
stellaux_server/src/domains/admin/dto/: mod.rs
stellaux_server/src/domains/auth/api/: routes.rs
stellaux_server/src/domains/auth/application/: mod.rs  session_contracts.rs
stellaux_server/src/domains/auth/domain/: error.rs  ports.rs
stellaux_server/src/domains/auth/dto/: mod.rs
stellaux_server/src/domains/auth/infra/: mod.rs
stellaux_server/src/domains/cart/: mod.rs
stellaux_server/src/domains/cart/api/: routes.rs
stellaux_server/src/domains/cart/dto/: mod.rs
stellaux_server/src/domains/catalog/api/: routes.rs
stellaux_server/src/domains/catalog/dto/: mod.rs
stellaux_server/src/domains/checkout/api/: routes.rs
stellaux_server/src/domains/checkout/dto/: mod.rs
stellaux_server/src/domains/craft/api/: routes.rs
stellaux_server/src/domains/craft/dto/: mod.rs
stellaux_server/src/domains/webhooks/: mod.rs
stellaux_server/src/domains/webhooks/api/: routes.rs
stellaux_server/src/domains/webhooks/application/: mod.rs  process_webhook_use_case.rs
stellaux_server/src/domains/webhooks/domain/: error.rs  mod.rs  webhook_event.rs  webhook_repository.rs
stellaux_server/src/domains/webhooks/dto/: mod.rs
stellaux_server/src/domains/webhooks/infra/: mod.rs
stellaux_server/src/entity/: craft_compatibility.rs  inventory_levels.rs  mod.rs  product_images.rs  product_variants.rs  products.rs  user_roles.rs
stellaux_server/src/migration/: m20260516_000001_initial_catalog.rs  m20260608_000001_user_roles.rs  mod.rs
stellaux_server/tests/: admin_products_integration.rs
supabase/: config.toml
(+71 files in other folders)
