[package]
name = "stellaux_server"
version = "0.1.0"
edition = "2024"

[dependencies]
# ─── Web framework + async runtime ─────────────────────────────────────────
axum = { version = "0.8", features = ["macros", "http2", "tokio"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# ─── Tower middleware ──────────────────────────────────────────────────────
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "compression-gzip",
  "decompression-gzip",
  "limit",
  "timeout",
  "request-id",
  "sensitive-headers",
  "set-header",
  "catch-panic",
] }
axum-prometheus = "0.7"

# ─── Database: sea-orm (built on sqlx, async + rustls, no libpq) ──────────
sea-orm = { version = "1.1", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "macros",
  "with-chrono",
  "with-uuid",
  "with-json",
  "debug-print",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
  "with-uuid",
] }

# ─── Auth & crypto (all pure-Rust: ring, RustCrypto) ──────────────────────
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# ─── HTTP client (Stripe, Shippo, Resend) ──────────────────────────────────
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "gzip",
  "brotli",
  "charset",
  "http2",
] }

# ─── Serialization & validation ────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
validator = { version = "0.20", features = ["derive"] }

# ─── Error handling ────────────────────────────────────────────────────────
thiserror = "2"
anyhow = "1"

# ─── Configuration ─────────────────────────────────────────────────────────
config = { version = "0.15", default-features = false, features = ["toml", "yaml"] }
dotenvy = "0.15"

# ─── Observability ─────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
# Opt-in OpenTelemetry export. Uncomment when wiring up a collector (Jaeger/Tempo/Honeycomb).
# Version alignment is strict: opentelemetry 0.27 ↔ tracing-opentelemetry 0.28.
# tracing-opentelemetry = "0.28"
# opentelemetry        = { version = "0.27", features = ["trace"] }
# opentelemetry_sdk    = { version = "0.27", features = ["rt-tokio"] }
# opentelemetry-otlp   = { version = "0.27", features = ["tonic", "trace"] }

# ─── Time & IDs ────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde", "fast-rng"] }

# ─── Misc ──────────────────────────────────────────────────────────────────
bytes = "1"
url = { version = "2", features = ["serde"] }
mime = "0.3"

[dev-dependencies]
rstest = "0.23"
fake = { version = "3", features = ["derive", "uuid", "chrono"] }
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util", "macros"] }

# Production release profile — smaller, faster binary.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
